Complete main page and post page layout

--- a/src/app/post-page/post-page.component.html
+++ b/src/app/post-page/post-page.component.html
@@ -1,1 +1,38 @@
-<p>post-page works!</p>
+<div class="post">
+  <div class="header">
+    <h1>Post title</h1>
+    <button routerLink="/" class="btn btn-link">Back to Home</button>
+  </div>
+
+  <div class="info">
+    <strong>Author</strong>
+    <small>12.09.2020</small>
+  </div>
+
+  <div>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat molestiae totam molestias minus consequuntur
+      explicabo vitae voluptatibus mollitia corporis impedit, adipisci autem ea laborum, delectus eaque quam dolore quas
+      quae itaque enim, tempora quibusdam nam minima. Nam neque cumque adipisci doloribus repellat sit pariatur nesciunt
+      fugiat, corrupti repellendus. Explicabo, blanditiis?
+    </p>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat molestiae totam molestias minus consequuntur
+      explicabo vitae voluptatibus mollitia corporis impedit, adipisci autem ea laborum, delectus eaque quam dolore quas
+      quae itaque enim, tempora quibusdam nam minima. Nam neque cumque adipisci doloribus repellat sit pariatur nesciunt
+      fugiat, corrupti repellendus. Explicabo, blanditiis?
+    </p>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat molestiae totam molestias minus consequuntur
+      explicabo vitae voluptatibus mollitia corporis impedit, adipisci autem ea laborum, delectus eaque quam dolore quas
+      quae itaque enim, tempora quibusdam nam minima. Nam neque cumque adipisci doloribus repellat sit pariatur nesciunt
+      fugiat, corrupti repellendus. Explicabo, blanditiis?
+    </p>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat molestiae totam molestias minus consequuntur
+      explicabo vitae voluptatibus mollitia corporis impedit, adipisci autem ea laborum, delectus eaque quam dolore quas
+      quae itaque enim, tempora quibusdam nam minima. Nam neque cumque adipisci doloribus repellat sit pariatur nesciunt
+      fugiat, corrupti repellendus. Explicabo, blanditiis?
+    </p>
+  </div>
+</div>
